<resources>
    <string name="app_name">X Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="songs">Songs</string>
    <string name="album">Album</string>
    <string name="todo12">TODO</string>
    <string name="sleep_after_seconds">Sleep after (seconds)</string>
    <string name="todo1">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="x_music">X Music</string>
    <string name="textview1">TextView</string>
    <string name="_0_00">0:00</string>
    <string name="_0_001">0:00</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="enter">Enter…</string>
    <string name="todo9">TODO</string>
    <string name="new_playlist">New Playlist</string>
    <string name="search">Search…</string>
    <string name="more">More…</string>
    <string name="day">Day</string>
    <string name="timer">Timer</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="remove_song_from_favorites">Remove song from favorites</string>
    <string name="details">Details</string>
    <string name="remove_playlist">Remove Playlist</string>
    <string name="play_all">Play All</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="change_view">Change View</string>
    <string name="equilizer">Equilizer</string>
    <string name="share">Share</string>
    <string name="favorites">Favorites</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="sort">sort</string>
    <string name="my_playlists">My Playlists</string>
    <string name="share_this_app">Share this app</string>
    <string name="about_x_music">About X Music</string>
    <string name="support_me">Support Me</string>
    <string name="close">Close</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_size">Sort by size</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_song_from_playlist">Remove song from playlist</string>
    <string name="newest_first">Newest first</string>
    <string name="oldest_first">Oldest first</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="a_z">A - Z</string>
    <string name="z_a">Z - A</string>
    <string name="your_playlists">Your Playlists</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create">Create</string>
    <string name="a_basic_music_player_with_some_advanced_functionalities_to_bring_up_some_taste_of_your_favorites_songs_in_your_daily_life">A basic music player with some advanced functionalities to bring up some taste of your favorites songs in your daily life.</string>
    <string name="custom_tip">custom tip</string>
    <string name="buy_me_a_meal">buy me a meal</string>
    <string name="buy_me_a_coffee">buy me a coffee</string>
    <string name="if_you_like_my_work_than_support_me_with_below_options_it_would_really_helps_and_motivates_me_to_develop_more_awesome_applications_like_this_keep_supporting_thanks">If you like my work than ,Support me with below options.It would really helps and motivates me to develop more awesome applications like this.Keep supporting.Thanks! :)</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="developed_by_hiten_khatri">Developed by Hiten Khatri</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="support_developer">Support Developer</string>
    <string name="next">Next</string>
    <string name="artist">artist</string>
    <string name="home">Home</string>
    <string name="add_to_favorites">Add to favorites</string>
</resources>