<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/menu9"
        android:icon="@drawable/sort"
        android:orderInCategory="100"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu10"
                android:orderInCategory="100"
                android:title="@string/sort_by_date"
                app:showAsAction="never" >
                <menu>
                    <item
                        android:id="@+id/menu13"
                        android:orderInCategory="100"
                        android:title="@string/newest_first"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/menu14"
                        android:orderInCategory="100"
                        android:title="@string/oldest_first"
                        app:showAsAction="never" />
                </menu>
            </item>
            <item
                android:id="@+id/menu11"
                android:orderInCategory="100"
                android:title="@string/sort_by_size"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/menu15"
                        android:orderInCategory="100"
                        android:title="@string/ascending"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/menu16"
                        android:orderInCategory="100"
                        android:title="@string/descending"
                        app:showAsAction="never" />
                </menu>
            </item>
            <item
                android:id="@+id/menu12"
                android:orderInCategory="100"
                android:title="@string/sort_by_name"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/menu17"
                        android:orderInCategory="100"
                        android:title="@string/a_z"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/menu18"
                        android:orderInCategory="100"
                        android:title="@string/z_a"
                        app:showAsAction="never" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu23"
        android:icon="@drawable/playlist_play"
        android:orderInCategory="100"
        android:title="@string/my_playlists"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu20"
        android:icon="@drawable/favorite_fill"
        android:orderInCategory="100"
        android:title="@string/favorites"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu1"
        android:orderInCategory="100"
        android:title="@string/day"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu5"
        android:orderInCategory="200"
        android:title="@string/timer"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu19"
        android:orderInCategory="200"
        android:title="@string/equilizer"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu3"
        android:orderInCategory="200"
        android:title="@string/favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu4"
        android:orderInCategory="200"
        android:title="@string/my_playlists"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu2"
        android:orderInCategory="200"
        android:title="@string/share_this_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu6"
        android:orderInCategory="200"
        android:title="@string/about_x_music"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu7"
        android:orderInCategory="200"
        android:title="@string/support_me"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu8"
        android:orderInCategory="200"
        android:title="@string/close"
        app:showAsAction="never" />
</menu>