<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    <item
        android:id="@+id/menu1"
        android:orderInCategory="100"
        android:title="@string/remove_song_from_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu2"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu3"
        android:orderInCategory="200"
        android:title="@string/details"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu4"
        android:orderInCategory="100"
        android:title="@string/add_to_queue"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu5"
        android:orderInCategory="100"
        android:title="@string/play_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu6"
        android:orderInCategory="100"
        android:title="@string/equilizer"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu7"
        android:orderInCategory="200"
        android:title="@string/sleep_timer"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu8"
        android:orderInCategory="200"
        android:title="@string/close"
        app:showAsAction="never" />
</menu>
