<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rel_add"
        android:layout_width="250dp"
        android:layout_height="190dp"
        android:layout_centerInParent="true"
        android:background="@drawable/layour_bor_rad"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/playlist_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/playLists_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView9"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/enter"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playLists_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/create" />
    </RelativeLayout>

</RelativeLayout>