<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="390dp"
    android:background="@drawable/layour_bor_rad"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/your_playlists"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/playLists1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center">

    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playLists1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="0sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/addPlayListbtn"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/add_fill" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_playlist"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>



</RelativeLayout>